# falcon-system-utils

./: CMakeLists.txt  LICENSE  README.md  compile.fish  compile.sh
include/: create-commands.hpp  create-header.hpp  create-project.hpp  dotfiles-commands.hpp  dotfiles.hpp  update.hpp
src/: create-commands.cpp  create-header.cpp  create-project.cpp  dotfiles-commands.cpp  dotfiles.cpp  main.cpp  update.cpp
